# Synaxis

./: .gitignore  .mailmap  AUTHORS  CHANGELOG.md  Dockerfile  FAQ  INSTALL  Makefile.am  Makefile.in  README.md  README.txt  UPGRADE  config.h  configure  configure.ac  x3.conf.example
docs/: DEFCON  access-levels.txt  coding-style.txt  ircd-modes.txt
rx/: Makefile.in
src/: Makefile.am  Makefile.in  alloc-slab.c  alloc-x3.c  chanfix.c  chanserv.c  chanserv.h  chanserv.help  common.h  conf.c  conf.h  config.h.in  crypto.c  crypto.h  dict-splay.c  dict.h  eventhooks.c  eventhooks.h  gline.c  gline.h  global.c  global.h  global.help  groupserv.c  hash.c  hash.h  heap.c  heap.h  helpfile.c  helpfile.h  infoserv.c  ioset-epoll.c  ioset-impl.h  ioset-kevent.c  ioset-select.c  ioset.c  ioset.h  ircv3.c  ircv3.h  log.c  (+78 more)
src/plugins/: __init__.py
src/plugins/annoy/: plugin.py
src/plugins/example/: __init__.py  plugin.py
src/plugins/hangman/: plugin.py
